noinst_LIBRARIES = libccan.a
libccan_a_SOURCES = \
	ccan/str/str.h \
	ccan/str/str.c \
	ccan/str/debug.c \
	ccan/str/str_debug.h \
	ccan/tlist/tlist.h \
	ccan/tcon/tcon.h \
	ccan/container_of/container_of.h \
	ccan/build_assert/build_assert.h \
	ccan/list/list.h \
	ccan/list/list.c \
	ccan/read_write_all/read_write_all.c \
	ccan/read_write_all/read_write_all.h \
	ccan/time/time.h \
	ccan/time/time.c \
	ccan/check_type/check_type.h \
	ccan/compiler/compiler.h \
	ccan/array_size/array_size.h \
	ccan/talloc/talloc.c \
	ccan/talloc/talloc.h \
	ccan/typesafe_cb/typesafe_cb.h \
	ccan/htable/htable_type.h \
	ccan/htable/htable.h \
	ccan/htable/htable.c \
	ccan/hash/hash.h \
	ccan/hash/hash.c \
	ccan/failtest/failtest.h \
	ccan/failtest/failtest_undo.h \
	ccan/failtest/failtest.c \
	ccan/failtest/failtest_proto.h \
	ccan/failtest/failtest_override.h
