noinst_LIBRARIES = libccan.a
libccan_a_SOURCES = \
	ccan/read_write_all/read_write_all.c \
	ccan/read_write_all/read_write_all.h \
	ccan/typesafe_cb/typesafe_cb.h \
	ccan/array_size/array_size.h \
	ccan/tlist/tlist.h \
	ccan/time/time.h \
	ccan/time/time.c \
	ccan/list/list.c \
	ccan/list/list.h \
	ccan/compiler/compiler.h \
	ccan/str/debug.c \
	ccan/str/str.c \
	ccan/str/str.h \
	ccan/str/str_debug.h \
	ccan/failtest/failtest_proto.h \
	ccan/failtest/failtest.h \
	ccan/failtest/failtest_override.h \
	ccan/failtest/failtest_undo.h \
	ccan/failtest/failtest.c \
	ccan/tcon/tcon.h \
	ccan/build_assert/build_assert.h \
	ccan/check_type/check_type.h \
	ccan/htable/htable.c \
	ccan/htable/htable.h \
	ccan/htable/htable_type.h \
	ccan/talloc/talloc.c \
	ccan/talloc/talloc.h \
	ccan/hash/hash.h \
	ccan/hash/hash.c \
	ccan/endian/endian.h \
	ccan/container_of/container_of.h
